<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yjb.guard.FindPassActivity" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_chooseQuestion"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spQuestionFindPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView1"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/edAnswerFindPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spQuestionFindPwd"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_answer" />

    <Button
        android:onClick="btnFindPwdClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edAnswerFindPwd"
        android:layout_marginTop="10dp"
        android:text="@string/text_findPwd" />

</RelativeLayout>